--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+body {
+  background-color: rgb(236, 154, 225);
+}
+.outerContainer {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 10px;
+  position: relative;
+  top: 5rem;
+  gap: 1rem;
+}
+.outerContainer > .card {
+  background-color: rgb(111, 224, 172);
+  width: 25rem;
+  border-radius: 10px;
+  padding: 20px;
+  transition: all 0.2s linear;
+}
+.header {
+  color: red;
+  font-weight: bold;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.price {
+  text-align: center;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.smallPrice {
+  font-size: 1rem;
+  font-weight: 500;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+ul {
+  list-style: none;
+}
+i {
+  margin-right: 0.7rem;
+}
+.muted {
+  opacity: 0.6;
+}
+.button {
+  border-style: none;
+  background-color: rgb(7, 11, 243);
   color: white;
+  width: 100%;
+  height: 3rem;
+  border-radius: 2rem;
+  letter-spacing: 4px;
+  opacity: 0.7;
 }
-
-.App-link {
-  color: #61dafb;
+.outerContainer .card:hover {
+  transform: translateY(-10px);
+  box-shadow: 3px 3px 4px black;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.outerContainer .card:hover .button {
+  opacity: 1;
+  cursor: pointer;
 }
